<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_colour_two">

    <FrameLayout
        android:id="@+id/fragment_container_dealer_sales"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/linearTop_dealer_sales"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardBack_dealer_sales"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                app:cardBackgroundColor="#00000000"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_back" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTitle_dealer_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/cardBack_dealer_sales"
                android:fontFamily="@font/inter_semibold"
                android:text="Dealer CY vs LY Sales"
                android:textColor="#000"
                android:textSize="14sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/rel_main_dealer_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_below="@+id/linearTop_dealer_sales">

        <TextView
            android:id="@+id/textview33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="Select Division"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtSearchdivision"
            android:layout_below="@+id/textview33"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Division"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />

        <TextView
            android:id="@+id/textview11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtSearchdivision"
            android:fontFamily="@font/inter_regular"
            android:text="Select Branch Name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtSearchbranch"
            android:layout_below="@+id/textview11"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Branch"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />


        <TextView
            android:id="@+id/textview1"
            android:layout_below="@+id/edtSearchbranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Select Dealer/Distributor"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtSearch"
            android:layout_below="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Dealer/Distributor"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />

        <TextView
            android:id="@+id/textview3"
            android:layout_below="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="Select Year"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="visible"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtSearchyear"
            android:layout_below="@+id/textview3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:visibility="visible"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Status"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />

        <RelativeLayout
            android:id="@+id/dealer_date_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtSearchyear"
            android:visibility="gone"
            android:layout_margin="2dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/cardSearch"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/inter_regular"
                        android:text="From"
                        android:textStyle="bold"
                        android:textColor="#383838"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:id="@+id/cardFrom"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/edittext_shape_new"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/ic_calendar_new" />


                        <TextView
                            android:id="@+id/tvFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/inter_regular"
                            android:hint="DD-MM-YYYY"
                            android:textColor="#000"
                            android:textSize="12sp" />


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/inter_regular"
                        android:text="To"
                        android:textStyle="bold"
                        android:textColor="#383838"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:id="@+id/cardTo"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_shape_new"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/ic_calendar_new" />

                        <TextView
                            android:id="@+id/tvTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:fontFamily="@font/inter_regular"
                            android:hint="DD-MM-YYYY"
                            android:textColor="#000"
                            android:textSize="12sp" />


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@id/cardSearch"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="22dp"
                android:background="@drawable/edittext_shape_new">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_search_customer" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_dealer_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/dealer_date_filter"
            android:visibility="visible">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title_name"
                            android:layout_width="170dp"
                            android:layout_height="match_parent"
                            android:background="#ACE0F4"
                            android:text="Name"
                            android:textColor="#383838"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/title_ly"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:text="@string/ly_n_lac"
                            android:background="#ACE0F4"
                            android:textSize="13sp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/title_lmtd"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:text="@string/lymtd_n_lac"
                            android:background="#ACE0F4"
                            android:textSize="13sp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/title_cy"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:background="#ACE0F4"
                            android:text="@string/cy_n_lac"
                            android:textSize="13sp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/title_cmtd"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:background="#ACE0F4"
                            android:text="@string/cymtd_n_lac"
                            android:textSize="13sp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_dealer_sale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/report_dealerslelayout"/>
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>