<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_colour_two">

    <FrameLayout
        android:id="@+id/fragment_container_dealer_growth"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/linearTop_dealer_growth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardBack_dealer_growth"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                app:cardBackgroundColor="#00000000"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_back" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTitle_dealer_growth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/cardBack_dealer_growth"
                android:fontFamily="@font/inter_semibold"
                android:text="Dealer Growth"
                android:textColor="#000"
                android:textSize="14sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/rel_main_dealer_growth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_below="@+id/linearTop_dealer_growth">

        <TextView
            android:id="@+id/textview33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="Select Division"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtSearchdivision"
            android:layout_below="@+id/textview33"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Division"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />

        <TextView
            android:id="@+id/textview11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtSearchdivision"
            android:fontFamily="@font/inter_regular"
            android:text="Select Branch Name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtSearchbranch"
            android:layout_below="@+id/textview11"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Branch"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />


        <TextView
            android:id="@+id/textview1"
            android:layout_below="@+id/edtSearchbranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Select Dealer/Distributor"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtSearch"
            android:layout_below="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Dealer/Distributor"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />

        <TextView
            android:id="@+id/textview3"
            android:layout_below="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="Select Remark"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="visible"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtstatus"
            android:layout_below="@+id/textview3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:visibility="visible"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Remark"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />

        <TextView
            android:id="@+id/textview44"
            android:layout_below="@+id/edtstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="Select Year"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="visible"
            android:singleLine="true"
            android:padding="5dp"
            android:textColor="#383838"
            android:textStyle="bold"
            android:textColorHint="@color/hintColor"
            android:textSize="13sp" />


        <AutoCompleteTextView
            android:id="@+id/edtSearchyear"
            android:layout_below="@+id/textview44"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:visibility="visible"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape_new"
            android:focusable="false"
            android:hint="Select Year"
            android:fontFamily="@font/inter_regular"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableRight="@drawable/ic_arrow_spinner"
            android:textColorHint="@color/hintColor"
            android:textSize="14sp"
            android:theme="@style/MyEditTextThemeColor" />


        <RelativeLayout
            android:id="@+id/rel_dealer_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/edtSearchyear"
            android:visibility="visible">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title_name"
                            android:layout_width="170dp"
                            android:layout_height="match_parent"
                            android:background="#ACE0F4"
                            android:text="Name"
                            android:textColor="#383838"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/title_lytm"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:text="@string/lytm"
                            android:background="#ACE0F4"
                            android:textSize="13sp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/title_cytm"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:text="@string/cytm"
                            android:background="#ACE0F4"
                            android:textSize="13sp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/title_growth"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:background="#ACE0F4"
                            android:text="@string/growth"
                            android:textSize="13sp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/title_remark"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:background="#ACE0F4"
                            android:text="Remark"
                            android:textSize="13sp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_dealer_growth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/report_dealerslelayout"/>
                </LinearLayout>
            </HorizontalScrollView>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>